style.css
/* ... */
audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}

#home-banner-box {
  overflow: hidden;
}

.home-banner.loading .video-background {
  opacity: 0;
}

.video-foreground,
.video-background iframe {
  position: absolute;
  transform: scale(1.15);
  top: 43%;
  left: 0;
  width: 100%;
  height: 99%;
  pointer-events: none; 
}

audio:not([controls]) {
  display: none;
  height: 0;
}

[hidden],
template {
  display: none;
}

a {
  background-color: transparent;
}

a:active,
a:hover {
  outline: 0;
}

dfn {
  font-style: italic;
}

mark {
  background: #ff0;
  color: #000;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

img {
  border: 0;
}

svg:not(:root) {
  overflow: hidden;
}

figure {
  margin: 1em 2.5rem;
}

hr {
  box-sizing: content-box;
  height: 0;
}

button {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}

button[disabled],
html input[disabled] {
  cursor: default;
}

/* Added Partner-Buttons on Partner Page reqiures WP Store Locator Plugin!*/
.partner-buttons {
  width: 6rem;
  margin: .5rem 1rem;
  padding: 1.1rem 1rem 0 1rem;
  text-align: center;
  line-height: 3.8rem;
  vertical-align: middle;
  background: var(--primary);
  border-radius: 3px;
  transition: all .4s;
}

a.partner-buttons:hover {
  color: var(--primary);
  background: #fff;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

input {
  line-height: normal;
}

input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

legend {
  border: 0;
  padding: 0;
}

textarea {
  overflow: auto;
}

optgroup {
  font-weight: bold;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

td,
th {
  padding: 0;
}

/*--------------------------------------------------------------
# Typography
--------------------------------------------------------------*/
h1, h3, h4, h5, h6 {
  clear: both;
  color: #24292e;
  font-weight: 600;
  margin-top: 24px;
  margin-bottom: 15px;
}
h1 {
  font-size: 32px;
}
h2 {
  font-size: 24px;
  line-height: 1.25;
}
h3 {
  font-size: 18px;
  line-height: 25px;
}
h4 {
  font-size: 16px;
  line-height: 20px;
}
h5 {
  font-size: 14px;
  line-height: 17.5px;
}

p {
  margin-bottom: 1.5em;
}
h1.entry-title {
  letter-spacing: 2px;
  font-size: 3.2rem;
  text-align: center;
}
h2.entry-title {
  border-bottom: 1px solid #eaecef;
}
h3.widget-title {
  font-size: 1.2rem;
}

/*--------------------------------------------------------------
# Elements
--------------------------------------------------------------*/
body {
  background: #fff;
  /* Fallback for when there is no custom background color defined. */
}

img {
  height: auto;
  /* Make sure images are scaled correctly. */
  max-width: 100%;
  /* Adhere to container width. */
}

figure {
  margin: 1em 0;
  /* Extra wide images within figure tags don't overflow the content area. */
}

table {
  margin: 0 0 1.5em;
  width: 100%;
}

/*--------------------------------------------------------------
# Forms
--------------------------------------------------------------*/

.human {
  line-height: 44px;
}

/* Overwrite of margin from Error-Area Contact Form 7*/
div.wpcf7-response-output {
  margin: 4.7em 0.5em 1em;
}

.inputPostalCode, .postalCodeSubmit, .inputPostalCodeDark {
  color: var(--dark-grey);
  width: 100%;
  height: 44px;
  line-height: 22px;
  border-radius: 3px;
  padding-left: .5rem;
}

.postalCodeSubmit {
  font-size: 1.245rem !important;
  letter-spacing: .5px;
}

.inputPostalCode, .inputPostalCodeDark, textarea {
  font-size: 1.445rem !important;
  font-weight: 200;
  letter-spacing: 1px;
}

.inputPostalCodeDark {
  border: 1px solid rgba(255, 255, 255, 0.125) !important;
  background: var(--dark) !important;
  color: #f5f5f5 !important;
}

.wpsl-pepper-store-list {
  margin-bottom: 3rem;
}

/*--------------------------------------------------------------
# Navigation
--------------------------------------------------------------*/
header#masthead {
  margin-bottom: 0;
  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
  padding: 1.066rem 1rem;
  z-index: 999;
}

.navbar-brand > a {
  color: rgba(0, 0, 0, 0.9);
  font-size: 1.1rem;
  outline: medium none;
  text-decoration: none;
  color: #fff;
  font-weight: 700;
}

.navbar-brand > a:visited, .navbar-brand > a:hover {
  text-decoration: none;
}

#page-sub-header {
  position: relative;
  z-index: 9;
  padding-bottom: 0;
  text-align: center;
  font-size: 1.25rem;
  background-size: cover !important;
  background-position: center !important;
  background-attachment: fixed !important;
  height: calc(78vh - 107px);
}

.gradient-end-page {
  width: 100%;
  height: 260px;
  position: absolute;
  bottom: 0;
  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
}
/* ... */

